--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ themes/classic/views/
 # End of https://www.gitignore.io/api/yii,phpstorm
 /Relations/nbproject/private/
 /Inheritance/nbproject/private/
+/Migrations/nbproject/private/
